--- a/src/app/form/app.af-form.css
+++ b/src/app/form/app.af-form.css
@@ -70,5 +70,5 @@
   mat-radio-group {
     display: flex;
     width: 95%;
-    justify-content: space-around;
+    justify-content: space-between;
   }
