--- a/src/app/form/app.af-form.html
+++ b/src/app/form/app.af-form.html
@@ -93,7 +93,7 @@
             <!--SPACING-->
           </mat-grid-tile>
           <mat-grid-tile colspan="3">
-            <mat-radio-group [ngModel]="statutVersement" (ngModelChange)="onChangeStatus($event)">
+            <mat-radio-group [(ngModel)]="statutVersement">
               <mat-radio-button [value]="1">Versement unique</mat-radio-button>
               <mat-radio-button [value]="2">Nouveau versement</mat-radio-button>
               <mat-radio-button [value]="3">Changement</mat-radio-button>
@@ -124,11 +124,7 @@
 <div class="sectionheader">
   <h6>VENTILATION BUDGETAIRE</h6>
   <div class="section">
-    <mat-form-field hideRequiredMarker=true floatLabel="always" class="tablestepper">
-    <input [ngModel]="displayedRows" (ngModelChange)="onChangeRows($event)" matInput placeholder="Lignes:"
-    type="number" step="1" min="1" max="30">
-    </mat-form-field>
-    <table mat-table [dataSource]="ventilation">  
+    <table mat-table [dataSource]="dSventilation">  
       <ng-container matColumnDef="ubr">
           <th mat-header-cell *matHeaderCellDef> UBR. </th>
           <td mat-cell *matCellDef="let element">
@@ -159,9 +155,23 @@
               <input [(ngModel)]="element.montant">
         </td>
       </ng-container>
+      <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-raised-button
+              (click)="onDelete(element.id)">Supprimer</button>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="addRow">
+        <td mat-footer-cell *matFooterCellDef colspan="6">
+            <button mat-raised-button color="primary"
+            (click)="onCreate()">Nouvelle Ligne</button>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-footer-row *matFooterRowDef="['addRow']"></tr>
     </table>
   </div>
 </div>
