styling of 3 new sections

--- a/src/app/formulaires/voyage-form/voyage-form.component.css
+++ b/src/app/formulaires/voyage-form/voyage-form.component.css
@@ -11,7 +11,9 @@
 #beneficiaire,  
 #demandeur,
 #nouveau-fournisseur, 
-#description-facture,
+#endroit-deplacement,
+#but-deplacement,
+#estimation-depenses,
 #ventilation-budgetaire,
 #references {
     border: 2px solid black;
@@ -100,6 +102,8 @@ mat-form-field {
     padding: 10px 0px 0px 5px;
 }
 
+#endroit-deplacement thead,
+#estimation-depenses thead,
 #ventilation-budgetaire thead,
 #description-facture thead {
     background-color: #CCD4DF;
