--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -44,7 +44,6 @@
 </div>
 
 <div id="nouveau-fournisseur">
-  <h6>NOUVEAU FOURNISSEUR</h6>
   <mat-form-field>
       <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
   </mat-form-field>
@@ -71,84 +70,51 @@
 </div>
 
 <div id="endroit-deplacement">
-  <h6>ENDROIT DU DÉPLACEMENT</h6>
+  <table width="100%">
+    <thead>
+            <tr>
+                <th colspan="3"></th>
+                <th colspan="2"></th>
+            </tr>
+            <tr>
+                <th align="left">ENDROIT DU DÉPLACEMENT</th>
+                <th>DURÉE DU DÉPLACEMENT</th>
+                <th>NOMBRE<br>DE JOURS</th>
+            </tr>
+    </thead>
+  </table>
   <mat-form-field>
-      <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
+      <input matInput type="text">
   </mat-form-field>
 
-  <mat-form-field>
-      <input matInput type="text" placeholder="TÉLÉPHONE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="FAX">
-  </mat-form-field>
-  <br>
-  <mat-form-field>
-      <input matInput type="text" placeholder="VILLE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="PROVINCE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="CODE POSTAL">
-  </mat-form-field>
+  
 </div>
 
 <div id="but-deplacement">
   <h6>BUT DU DÉPLACEMENT</h6>
   <mat-form-field>
-      <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
+      <input matInput type="text">
   </mat-form-field>
 
-  <mat-form-field>
-      <input matInput type="text" placeholder="TÉLÉPHONE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="FAX">
-  </mat-form-field>
-  <br>
-  <mat-form-field>
-      <input matInput type="text" placeholder="VILLE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="PROVINCE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="CODE POSTAL">
-  </mat-form-field>
 </div>
 
-<div id="estimation depenses">
+<div id="estimation-depenses">
   <h6>ESTIMATION DES DÉPENSES (EN DOLLARS CANADIENS)</h6>
-  <mat-form-field>
-      <input matInput type="text" placeholder="ADRESSE DE L'EMPLOYÉ ou DU FOURNISSEUR">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="TÉLÉPHONE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="FAX">
-  </mat-form-field>
-  <br>
-  <mat-form-field>
-      <input matInput type="text" placeholder="VILLE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="PROVINCE">
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput type="text" placeholder="CODE POSTAL">
-  </mat-form-field>
+  <table width="100%">
+        <thead>
+                <tr>
+                    <th colspan="3"></th>
+                    <th colspan="2"></th>
+                </tr>
+                <tr>
+                    <th>FRAIS D'INSCRIPTION</th>
+                    <th>TRANSPORT</th>
+                    <th>SÉJOUR</th>
+                    <th>AUTRES</th>
+                    <th>TOTAL</th>
+                </tr>
+        </thead>
+  </table>
 </div>
 
 <div id="ventilation-budgetaire">
