--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -82,19 +82,35 @@
                 <th>NOMBRE<br>DE JOURS</th>
             </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>
+                <mat-form-field>
+                    <input matInput type="text">
+                </mat-form-field>
+            </td>
+            <td>
+                <mat-form-field>
+                    <input matInput [matDatepicker]="pickerDU" placeholder="DU" (click)="pickerDU.open()">
+                    <mat-datepicker-toggle matSuffix [for]="pickerDU"></mat-datepicker-toggle>
+                    <mat-datepicker #pickerDU></mat-datepicker>
+                </mat-form-field>
+            </td>
+            <td>
+                <mat-form-field>
+                    <input matInput [matDatepicker]="pickerAU" placeholder="AU" (click)="pickerAU.open()">
+                    <mat-datepicker-toggle matSuffix [for]="pickerAU"></mat-datepicker-toggle>
+                    <mat-datepicker #pickerAU></mat-datepicker>
+                </mat-form-field>
+            </td>
+        </tr>
+    </tbody>
   </table>
-  <mat-form-field>
-      <input matInput type="text">
-  </mat-form-field>
-
-  
 </div>
 
 <div id="but-deplacement">
   <h6>BUT DU DÉPLACEMENT</h6>
-  <mat-form-field>
-      <input matInput type="text">
-  </mat-form-field>
+  <textarea></textarea>
 
 </div>
 
@@ -114,6 +130,35 @@
                     <th>TOTAL</th>
                 </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <mat-form-field>
+                        <input matInput type="text">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field>
+                        <input matInput type="text">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field>
+                        <input matInput type="text">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field>
+                        <input matInput type="text">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field>
+                        <input matInput type="text">
+                    </mat-form-field>
+                </td>
+            </tr>
+        </tbody>
   </table>
 </div>
 
