--- a/src/app/form/app.af-form.css
+++ b/src/app/form/app.af-form.css
@@ -33,6 +33,9 @@
       padding: 0;
       margin: 0;
   }
+  #definition {
+    padding-top: 0.5em;
+  }
   
   mat-form-field {
     margin: 0px;
@@ -71,4 +74,15 @@
     display: flex;
     width: 95%;
     justify-content: space-between;
+  }
+
+  #signature-demandeur {
+    border: 2px solid black;
+    width: max-content;
+    margin-bottom: 5px;
+    padding: 5px 10px;
+  }
+
+  #signature-demandeur button {
+    margin-left: 60px;
   }
