--- a/src/app/form/app.af-form.html
+++ b/src/app/form/app.af-form.html
@@ -176,5 +176,37 @@
   </div>
 </div>
 
+<div class="sectionheader">
+  <h6>ATTESTATION DU BOURSIER ET DU (DES) TITULAIRE(S) DE SUBVENTION</h6>
+  <div class="section">
+    <p>
+      Par la présente, le boursier ET le(s) titulaire(s) de subvention déclarent et attestent que le boursier est inscrit comme étudiant à l'École Polytechnique de Montréal, que le travail du boursier s'inscrit dans son programme d'études ou de perfectionnement et que le montant octroyé constitue une bourse d'études ou de perfectionnement (aide financière) au sens des définitions ci-dessous.
+    </p><p>
+      Le boursier ET le(s) titulaire(s) de subvention reconnaissent aussi qu'il n'y a pas de relation employeur/employé, que le montant octroyé à titre de bourse d'études ou de perfectionnement (aide financière) n'est pas un gain admissible au régime de rentes du Québec, au régime d'assurance emploi, à la CSST, que le boursier n'a droit à aucun avantage social et qu'aucun impôt n'est tenu d'être prélevé à la source (bulletin d'interprétation IT-75R4) par l'École Polytechnique de Montréal.
+    </p>
+    <h6 id="definition">
+      Définitions selon le bulletin d'interprétation  IT-75R4, Loi de l'impôt sur le revenu
+    </h6><p>
+        Les bourses d'études sont des sommes ou des avantages accordés à des étudiants pour leur permettre de poursuivre leurs études.  Ces bourses visent habituellement à permettre à l'étudiant de poursuivre des études de niveau postsecondaire ou supérieur, habituellement dans une université, un collège, un institut technique ou un établissement d'enseignement semblable (...).  Les bourses d'études aident habituellement l'étudiant à poursuivre ses études dans le but d'obtenir un grade universitaire, un diplôme ou un certificat (...).  Habituellement, un étudiant n'a pas à faire de travaux particuliers pour le payeur en échange d'une bourse.
+    </p><p>
+      Les bourses de perfectionnement sont semblables à des bourses  d'études, en ce sens qu'il s'agit de sommes ou d'avantages accordés à des personnes pour leur permettre de poursuivre leur études.  Toutefois, le récipiendaire est habituellement un étudiant diplômé, et le payeur, une université, un organisme de bien-faisance ou un organisme semblable.  En général, les bourses de perfectionnement sont décernées pour des études doctorales ou pour du travail de niveau postdoctoral.
+    </p>
+    <div id="signature-demandeur">
+        <mat-form-field>
+            <input matInput type="text" placeholder="SIGNATURE DU DEMANDEUR">
+        </mat-form-field>
+        <button mat-raised-button>SIGNER</button>
+        <br>
+        <mat-checkbox
+          class="example-margin"
+          [(ngModel)]="checked"
+          [(indeterminate)]="indeterminate"
+          [labelPosition]="labelPosition"
+          [disabled]="disabled">
+          Je confirme et j'accepte la véracité des informations ci-dessus.
+        </mat-checkbox>
+    </div>
+  </div>
+</div>
 
 
