--- a/src/app/form/app.af-form.css
+++ b/src/app/form/app.af-form.css
@@ -53,14 +53,6 @@
     height: 100%;
     border: 0.25px;
   }
-  
-  .tablestepper {
-    margin: 3px;
-    width: 5em;
-    height: 100%;
-    border: 1px;
-    border-color: #ffffff;
-  }
 
   .monetaire {
       text-align: right;
@@ -90,6 +82,7 @@
 
   .mat-footer-cell {
     text-align: right;
+    padding-right: 10%;
   }
 
   .percentile {
