recopiage de la ventilation de François

--- a/src/app/formulaires/voyage-form/voyage-form.component.css
+++ b/src/app/formulaires/voyage-form/voyage-form.component.css
@@ -15,6 +15,7 @@
 #but-deplacement,
 #estimation-depenses,
 #ventilation-budgetaire,
+#avances-demandees,
 #references {
     border: 2px solid black;
     margin: 5px;
