--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -171,25 +171,25 @@
   <h6>VENTILATION BUDGÉTAIRE</h6>
   <table mat-table [dataSource]="dSventilation">  
         <ng-container matColumnDef="ubr">
-            <th mat-header-cell *matHeaderCellDef> UBR. </th>
+            <th mat-header-cell *matHeaderCellDef> UBR </th>
             <td mat-cell *matCellDef="let element">
                   <input [(ngModel)]="element.ubr">
             </td>
         </ng-container>
         <ng-container matColumnDef="compte">
-            <th mat-header-cell *matHeaderCellDef> Compte </th>
+            <th mat-header-cell *matHeaderCellDef> COMPTE </th>
             <td mat-cell *matCellDef="let element">
                 <input [(ngModel)]="element.compte">
           </td>
         </ng-container>
         <ng-container matColumnDef="unite">
-            <th mat-header-cell *matHeaderCellDef> Unité administrative </th>
+            <th mat-header-cell *matHeaderCellDef> UNITÉ <br> ADM. </th>
             <td mat-cell *matCellDef="let element">
                 <input [(ngModel)]="element.unite">
           </td>
         </ng-container>
         <ng-container matColumnDef="montant">
-            <th mat-header-cell *matHeaderCellDef> Montant </th>
+            <th mat-header-cell *matHeaderCellDef> MONTANT </th>
             <td mat-cell *matCellDef="let element">
                 <input [(ngModel)]="element.montant" (ngModelChange)="updateTotal()"
                 type="number">
@@ -218,55 +218,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
     </table>
-  <!-- <table width="100%" mat-table [dataSource]="dSventilation"> -->
-      <!-- <thead>
-          <tr>
-              <th colspan="3"></th>
-              <th colspan="2"></th>
-          </tr>
-          <tr>
-              <th>UBR</th>
-              <th>COMPTE</th>
-              <th>UNITÉ <br> ADM.</th>
-              <th>MONTANT</th>
-          </tr>
-      </thead> -->
-      <!-- <tbody> -->
-                    <!-- <th mat-header-cell *matHeaderCellDef> UBR </th>
-                    <td mat-cell *matCellDef="let element">
-                          <input [(ngModel)]="element.ubr">
-                    </td>
-                    <th mat-header-cell *matHeaderCellDef> COMPTE </th>
-                    <td mat-cell *matCellDef="let element">
-                        <input [(ngModel)]="element.compte">
-                  </td>
-                    <th mat-header-cell *matHeaderCellDef> UNITÉ ADM. </th>
-                    <td mat-cell *matCellDef="let element">
-                        <input [(ngModel)]="element.unite">
-                  </td>
-                    <th mat-header-cell *matHeaderCellDef> MONTANT </th>
-                    <td mat-cell *matCellDef="let element">
-                        <input [(ngModel)]="element.montant" (ngModelChange)="updateTotal()"
-                        type="number">
-                  </td>
-                    <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button color="warn"
-                        (click)="onDelete(element.id)">x</button>
-                    </td>
-                  <td mat-footer-cell *matFooterCellDef colspan="5">
-                      <p>TOTAL: {{ ventilationTotal | currency}}</p>
-                  </td>
-                  <td mat-footer-cell *matFooterCellDef colspan="1">
-                      <button mat-mini-fab color="primary"
-                      (click)="onCreate()">+</button>
-                  </td>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr> -->
-        <!-- </tbody> -->
-  <!-- </table> -->
 </div>
 
 <div id="avances-demandees">
@@ -303,8 +254,8 @@
       </mat-form-field>
       
       <mat-checkbox
-        class="example-margin"
-        [(ngModel)]="checked"
+        class="checkbox-demandeur"
+        [(ngModel)]="checked-demandeur"
         [(indeterminate)]="indeterminate"
         [labelPosition]="labelPosition"
         [disabled]="disabled">
@@ -319,8 +270,8 @@
       </mat-form-field>
       
       <mat-checkbox
-          class="example-margin"
-          [(ngModel)]="checked"
+          class="checkbox-ubr"
+          [(ngModel)]="checked-ubr"
           [(indeterminate)]="indeterminate"
           [labelPosition]="labelPosition"
           [disabled]="disabled">
@@ -335,8 +286,8 @@
       </mat-form-field>
       
       <mat-checkbox
-          class="example-margin"
-          [(ngModel)]="checked"
+          class="checkbox-sup"
+          [(ngModel)]="checked-sup"
           [(indeterminate)]="indeterminate"
           [labelPosition]="labelPosition"
           [disabled]="disabled">
@@ -351,8 +302,8 @@
       </mat-form-field>
       
       <mat-checkbox
-          class="example-margin"
-          [(ngModel)]="checked"
+          class="checkbox-finance"
+          [(ngModel)]="checked-finance"
           [(indeterminate)]="indeterminate"
           [labelPosition]="labelPosition"
           [disabled]="disabled">
